# ct_artifacts

./: .gitignore  pyproject.toml
src/CT_simulation/: Analitical_MU_P.py  ForwardTask.py  ReverseTask.py  constants.py  coordinate_transform_functions.py  filterd_back_projection.py  gen_and_deg.py  main.py
src/tests/: CT_simulation.ipynb  Comparison.ipynb  ForwardTask.ipynb  ReverseTask.ipynb  Tristan_CT.ipynb  gen_test.ipynb  neural_net.ipynb  test.ipynb
