[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "CT_simulation"
version = "0.0.1"
authors = [
 { name="Mikhail", email="siomashmd@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]



[project.urls]
Homepage = ""
Issues = ""